# measurement-validation

./: AI_ANALYST.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  run_app.bat  run_app.command
.github/: pull_request_template.md
docs/: data-guide.md  decision-guide.md  methods.md  sources-and-originality.md
examples/: measuresignal-fictional-scale-demo.csv  measuresignal-fictional-scale-demo.xlsx  measuresignal-starter-template.xlsx
scripts/: generate_examples.py
src/measuresignal/: __init__.py  analysis.py  design.py  errors.py  examples.py  io.py
tests/: test_analysis.py  test_app_pages.py  test_design.py  test_examples.py  test_io.py
