[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "measuresignal"
version = "1.1.0"
description = "MeasureSignal: open, local-first exploratory measurement diagnostics"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "Ulrik Erlingsen" }]
keywords = [
  "measurement",
  "psychometrics",
  "exploratory factor analysis",
  "parallel analysis",
  "coefficient omega",
  "scale reliability",
  "marketing analytics",
  "streamlit",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.24,<3",
  "openpyxl>=3.1,<4",
  "pandas>=2.0,<3",
  "plotly>=5.18,<7",
  "scipy>=1.10,<2",
  "statsmodels>=0.14,<1",
  "streamlit>=1.38,<2",
]

[project.optional-dependencies]
test = [
  "build>=1.2,<2",
  "pytest>=8,<10",
  "ruff>=0.8,<1",
]

[project.urls]
Homepage = "https://github.com/UlrikErlingsen/measurement-validation"
Source = "https://github.com/UlrikErlingsen/measurement-validation"
Issues = "https://github.com/UlrikErlingsen/measurement-validation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402"]
